clusters/microk8s/infrastructure/network-observability/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: network-observability
  labels:
    name: network-observability
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
