clusters/microk8s/infrastructure/network-observability/ntopng-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ntopng
  namespace: network-observability
  labels:
    app: ntopng
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3000
    targetPort: http
    protocol: TCP
  - name: netflow
    port: 2055
    targetPort: netflow
    protocol: UDP
  selector:
    app: ntopng
