clusters/microk8s/infrastructure/network-observability/ntopng-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ntopng
  namespace: network-observability
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ntopng.gcelik.dev
    secretName: ntopng-tls
  rules:
  - host: ntopng.gcelik.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ntopng
            port:
              number: 3000
